[workspace]

[package]
name = "asserter"
version = "0.1.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swc-project/asserter.git"
description = "New assertion library for rust"
keywords = ["testing", "swc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asserter-macros = { path = "macros", version = "0.0.0" }