[package]
name = "asserter-macros"
version = "0.1.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swc-project/asserter.git"
description = "New assertion library for rust"
keywords = ["testing", "swc"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmutil = "0.5.3"
proc-macro2 = "1"
syn = { version = "1", features = ["fold", "full", "visit", "derive", "extra-traits"] }